@@ -836,7 +836,7 @@ int shapeObj_add(shapeObj *self, lineObj *line) {
 
 int shapeObj_draw(shapeObj *self, mapObj *map, layerObj *layer, 
                   imageObj *img) {
-    return msDrawShape(map, layer, self, img, -1);
+    return msDrawShape(map, layer, self, img, -1, MS_FALSE);
   }
 
 void shapeObj_setBounds(shapeObj *self) {
@@ -1050,7 +1050,7 @@ int rectObj_draw(rectObj *self, mapObj *map, layerObj *layer,
     shape.classindex = classindex;
     shape.text = strdup(text);
 
-    msDrawShape(map, layer, &shape, img, -1);
+    msDrawShape(map, layer, &shape, img, -1, MS_FALSE);
 
     msFreeShape(&shape);
     
