@@ -12,6 +12,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (5.3-dev, SVN trunk):
 ------------------------------------
 
+- Fixed bug when QUERYMAP hilite color is set and the shape's color in a
+  layer is from a data source (#2769)
+
 - Decoupled AUTO label placement from the positions enum in mapserver.h. Added 
   explicit case for POLYGON layers where CC is the default and then we try UC, 
   LC, CL and CR. (#2770)
